--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="game">
       <div id="dino"></div>
       <div id="cactus"></div>
+      <div id="cactor"></div>
       <div id="bird"></div>
       <div id="scoreText"> </div>
     </div>
